Finity 12.12.19 --- major enhancements

Fixed sparse matrix in place addition: gave erroneous results.

Fine grained modules. Contents of util are distributed over util,
core, numeric. Core contains components that do not depend on any
other finity modules. Numeric hosts numpy operations and acts as an
interace for NumpyExtra. Current modules are:

  core      log       parallel
  element   matrix    plot
  function  mesh      topology
  green     numeric   util

Get, GetItem, Align. New ArrayFunc objects replace former GetItem for
indexing one item (a[i]), indexing a slice (a[i:j]), and introducing
new axes (a[_]) and/or reordering axes (a.T), respectively. The reason
is twofold. 1. These three operations are fundamentally different and
interact with matrix operations in different ways. 2. Separating the
operations allows one to push Get towards the branches of the function
tree, reducing work, and Align towards the root, increasing likelyhood
of common subexpressions.

Diagonalize, TakeDiag. New ArrayFunc objects that replace one axis by
the diagonal of two, or vice versa, respectively. The former is
suboptimal, though valid, in actual evaluation, because of the
introduced zeros. Its main purpose is to serve as intermediate
operation that collapses against for instance Get or Dot.

Kronecker. New ArrayFunc object that introduces one axis with one
entry equal to the original array. Like Diagonalize its main purpose
is to serve as intermediary.

Expand. New ArrayFunc object that repeats singleton axes to the actual
shape. Like before its main purpose is to serve as intermediary as
singleton expansion usually obviates the need for explicit repetition.

New rectilinear mesh. New geometry evaluates by direct scaling &
translation of element-local coordinates. Function definition remains
unchanged.

Properties. A non-global mechanism to make parameters available to
funtions without passing them as arguments. Properties are local